Gecoding for places now works (? I assume it just took a while for our activation to take place, literally did nothing different). Added API key for displaying map and css for map in master, map is now not showing on main screen but will wait for a while to see if issue is same as before

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,7 +34,7 @@ body {
   font-size:26px;
 }
 
-.pagelist {
+.botpage {
   letter-spacing: normal;
   padding: 5px;
   word-spacing: 3px;
@@ -45,4 +45,8 @@ body {
   background-color: #FFEEEE;
   border-radius: 3px;
   padding: 2px 8px 2px 8px;
+}
+
+#map {
+  height: 300px;
 }
